# job_api

./: .env.example  .gitignore  Cargo.toml  README.md  client_id.txt  secret.txt
src/: encryption.rs  generate_key.rs  logging_middleware.rs  main.rs  rate_limit_middleware.rs
src/admin/: mod.rs  models.rs  routes.rs  validators.rs
src/admin/handlers/: contact.rs  dashboard.rs  exports.rs  files.rs  mod.rs  settings.rs  theme.rs  users.rs
src/admin/services/: dashboard_service.rs  export_service.rs  mod.rs
src/admin/tests/: handlers_tests.rs  mod.rs  services_tests.rs
src/auth/: extractors.rs  handlers.rs  mod.rs  models.rs  routes.rs  tests.rs
src/candidates/: mod.rs  models.rs  routes.rs  validators.rs
src/candidates/handlers/: ai.rs  applications.rs  email_templates.rs  files.rs  interview_email_templates.rs  interviews.rs  mod.rs  resumes.rs  saved_jobs.rs  videos.rs  youtube_videos.rs
src/candidates/tests/: handlers_tests.rs  mod.rs  validators_tests.rs
src/common/: dev_mode.rs  error.rs  helpers.rs  id_generator.rs  migrations.rs  mod.rs  state.rs  validation.rs
src/companies/: assets.rs  handlers.rs  mod.rs  models.rs  routes.rs  services.rs  tests.rs  validators.rs
src/jobs/: mod.rs  models.rs  routes.rs  validators.rs
src/jobs/handlers/: admin.rs  ai.rs  images.rs  (+5 more)
src/messages/: mod.rs  models.rs  routes.rs  tests.rs  validators.rs
src/profile/: mod.rs  models.rs  routes.rs  tests.rs  validators.rs
src/services/: aws.rs  email.rs  encryption.rs  google.rs  interviews.rs  job_templates.rs  mod.rs  monitoring.rs  openai.rs  panelists.rs  pdf.rs  rate_limit.rs  settings.rs  video.rs  youtube.rs
(+19 files in other folders)
